--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     <module>drools-framework-runtime-supervision</module>
     <module>drools-framework-rest-guvnor</module>
     <module>drools-service-runner-archetype</module>
-    <module>maven-guvnor-install-pojo-plugin</module>
+    <!--module>maven-guvnor-install-pojo-plugin</module-->
     <module>drools-runner-generator</module>
   </modules>
 
