--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
@@ -799,34 +799,34 @@
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-dataset-sql</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-dataset-api</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-dataset-core</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-displayer-api</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-common-client</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-dataset-client</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -842,43 +842,43 @@
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-dataset-editor</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-displayer-client</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-displayer-screen</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-displayer-editor</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-renderer-default</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-renderer-google</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
         </dependency>
 
         <dependency>
             <groupId>org.dashbuilder</groupId>
             <artifactId>dashbuilder-widgets</artifactId>
-            <version>0.3.0.CR4</version>
+            <version>0.4.0.Final</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -1596,16 +1596,11 @@
                             <compileSourcesArtifact>org.dashbuilder:dashbuilder-dataset-client</compileSourcesArtifact>
                             <compileSourcesArtifact>org.dashbuilder:dashbuilder-dataset-editor</compileSourcesArtifact>
                             <compileSourcesArtifact>org.dashbuilder:dashbuilder-displayer-api</compileSourcesArtifact>
-                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-displayer-client
-                            </compileSourcesArtifact>
-                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-displayer-screen
-                            </compileSourcesArtifact>
-                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-displayer-editor
-                            </compileSourcesArtifact>
-                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-renderer-default
-                            </compileSourcesArtifact>
+                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-displayer-client</compileSourcesArtifact>
+                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-displayer-screen</compileSourcesArtifact>
+                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-displayer-editor</compileSourcesArtifact>
+                            <compileSourcesArtifact>org.dashbuilder:dashbuilder-renderer-default</compileSourcesArtifact>
                             <compileSourcesArtifact>org.dashbuilder:dashbuilder-renderer-google</compileSourcesArtifact>
-
                             <!-- Guvnor -->
                             <compileSourcesArtifact>org.guvnor:guvnor-asset-mgmt-api</compileSourcesArtifact>
                             <compileSourcesArtifact>org.guvnor:guvnor-asset-mgmt-client</compileSourcesArtifact>
